# microstructure-lab

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
benchmarks/: benchmark_engine.py
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp
cpp/include/microstructure/: book.hpp  event.hpp  matching_engine.hpp  order.hpp  snapshot.hpp  trade.hpp
cpp/src/: book.cpp  event.cpp  matching_engine.cpp  order.cpp  snapshot.cpp  trade.cpp
cpp/tests/: test_matching_engine.cpp
dashboard/: app.py
docs/: analytics.md  api.md  architecture.md  dashboard.md  demo.md  development.md  docker_ci.md  event_format.md  execution_algorithms.md  limitations.md  market_microstructure.md  performance.md  recruiter_summary.md  reproducibility.md  strategy_comparison.md
src/microstructure_lab/: __init__.py  cli.py  config.py  paths.py
src/microstructure_lab/analytics/: __init__.py  cost_report.py  fills.py  impact.py  implementation_shortfall.py  leaderboard.py  slippage.py
src/microstructure_lab/benchmarking/: __init__.py  engine.py
src/microstructure_lab/execution/: __init__.py  adaptive.py  base.py  comparison.py  iceberg.py  parent_order.py  pov.py  simulator.py  twap.py  vwap.py
src/microstructure_lab/orderbook/: __init__.py  core.py
src/microstructure_lab/reporting/: demo.py
src/microstructure_lab/runs/: __init__.py  artifacts.py  manifest.py
src/microstructure_lab/schemas/: __init__.py  events.py
src/microstructure_lab/simulation/: __init__.py  impact.py  latency.py  replay.py  scenarios.py  synthetic.py
tests/: conftest.py  test_analytics.py  test_api.py  test_benchmark.py  test_comparison.py  test_core_bindings.py  test_dashboard.py  test_demo.py  test_docs.py  test_execution.py  test_runs.py  test_smoke.py  test_synthetic.py
